# gcloud-transcoder-app

./: .eslintrc.js  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  agent.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  vite.config.ts
.github/: release.yml
.github/workflows/: ci.yml  release.yml
docs/specs/: app-configuration.md  built-in-presets.md  index.md  job-observability.md  limitations-and-behavior.md  template-json-support.md
scripts/: dev.js  run-ui-command.cjs
src/: lib.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: run-ui-command.cjs
src-tauri/src/: main.rs
src/commands/: jobs.rs  mod.rs  process.rs  settings.rs  templates.rs
src/gcloud/: mod.rs  runner.rs  transcoder.rs
src/main/: main.ts
src/preload/: preload.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  index.css  main.tsx  types.ts
src/renderer/src/components/: ErrorBoundary.tsx  (+6 more)
src/storage/: config_store.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/public/: manifest.json
ui/scripts/: run-ui-command.cjs
ui/src/: App.test.tsx  App.tsx  tauri.ts  types.ts  updater.ts
ui/src/components/: Dashboard.tsx  Header.tsx  Icons.tsx  JobModal.test.tsx  JobModal.tsx  JobsTable.tsx  ProcessVideoPage.test.tsx  ProcessVideoPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx  TemplatesPage.test.tsx  TemplatesPage.tsx
ui/src/stores/: settingsStore.test.ts  settingsStore.ts
(+1 files in other folders)
